--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="social-links">
           <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.github.com/amarnathcjd" target="_blank" class="github"><i class="bx bxl-github"></i></a>
-          <a href="mailto:rajaprerak@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
+          <a href="mailto:amarnathcharichilil@gmail.com" target="_blank" class="google"><i class="bx bxl-google"></i></a>
 
       </div>
 
@@ -79,7 +79,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profile.jpeg" class="img-fluid" alt="">
+          <img src="assets/img/profiled.jpeg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
@@ -89,8 +89,9 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 12 October 1996</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 480-401-8112</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 28 November 2003</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +216 22 707 528</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Telegram:</strong> <a href='https://t.me/roseloverx'>RoseLoverX</a></li>
               </ul>
             </div>
             <div class="col-lg-6">
