--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Tempe, AZ</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> rajaprerak@gmail.com</li>
+                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Kozhikode, KL, IN</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> amarnathc@outlook.in</li>
               </ul>
             </div>
           </div>
