--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/profiled.jpeg" class="img-fluid" alt="">
+          <img src="assets/img/image_2022-01-02_134531.png" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
