--- a/index.html
+++ b/index.html
@@ -10,11 +10,9 @@
   <link rel="icon" type="image/png" href="/favicon.png"/>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
   <title>RoseLoverX</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
-
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -23,12 +21,6 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
-  <style>
-  body  {
-   background-image: url("1fYZ.gif");
-   background-color: #cccccc;
-}
-</style>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169007209-3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -40,7 +32,7 @@
 </head>
 
 <body>
-  
+  <div class="hero">
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
@@ -70,6 +62,7 @@
 
       </div>
 
+    </div>
     </div>
   </header><!-- End Header -->
 
