--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-  <div class="hero">
+  <div id="grad1">
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
