--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-  <div id="grad1">
+  <div id="grad1"><h1>SMd</h1></div>
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5BB8W2X"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
@@ -62,7 +62,6 @@
 
       </div>
 
-    </div>
     </div>
   </header><!-- End Header -->
 
