--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                 <a href="mailto:amarnathcharichilil@gmail.com" target="_blank" class="google"><i
                         class="bx bxl-google"></i></a>
             </div>
+            <centre>
+                <img
+                    src="https://github-readme-stats.vercel.app/api?username=Amarnathcjd&show_icons=true&&theme=tokyonight" />
+            </centre>
+
 
         </div>
     </header><!-- End Header -->
