--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="social-links">
 
                 <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i
-                        class="bx bxl-instagram"></i></a>
+                        class="bx bxl-telegram"></i></a>
                 <a href="https://www.github.com/amarnathcjd" target="_blank" class="github"><i
                         class="bx bxl-github"></i></a>
                 <a href="mailto:amarnathcharichilil@gmail.com" target="_blank" class="google"><i
