--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
             <div class="social-links">
 
-                <a href="https://www.linkedin.com/in/rajaprerak" target="_blank" class="linkedin"><i
+                <a href="https://t.me/roseloverx" target="_blank" class="linkedin"><i
                         class="bx bxl-telegram"></i></a>
                 <a href="https://www.github.com/amarnathcjd" target="_blank" class="github"><i
                         class="bx bxl-github"></i></a>
